tests/rt/pos/ifc/rcv2.picox
let val secret = 42 raisedTo {secret}
    val _ = send (self(), "public message")
    val _ = if secret > 0
            then send (self(), "secret message")
            else send (self(), "other secret message")
in rcvp ({secret},  [hn x => printWithLabels x]) end
